subida de fotos productos

--- a/pages/Tienda.html
+++ b/pages/Tienda.html
@@ -34,7 +34,7 @@
                     <ul class="lista-productos">
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/of-1.webp" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -45,7 +45,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/of-2.jpg" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -56,7 +56,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/of-3.jpg" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -67,7 +67,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/of-4.webp" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -83,7 +83,7 @@
                     <ul class="lista-productos">
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-1.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-2.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -105,7 +105,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-3.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -116,7 +116,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-4.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -127,7 +127,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-5.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -138,7 +138,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/in-6.png" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -154,7 +154,7 @@
                     <ul class="lista-productos">
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-1.jpg" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-2.jpg" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -176,7 +176,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-3.webp" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -187,7 +187,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-4.webp" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -198,7 +198,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-5.webp" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
@@ -209,7 +209,7 @@
                         </li>
                         <li>
                             <div>
-                                <img src="../assets/img/vaso-cafe.png" alt="Producto">
+                                <img class="tam-img" src="../assets/img/cafet-6.jpg" alt="Producto">
                             </div>
                             <div>
                                 <h3>Producto</h3>
