--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -29,11 +29,11 @@
             <h1>CARRITO</h1>
         </div>
         <section class="carrito">
-            <section >
+            <section>
                 <ul class="productos-carrito">
                     <li>          
                         <div>
-                            <img src="../assets/img/vaso-cafe.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-1.png" alt="">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -44,7 +44,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img src="../assets/img/vaso-cafe.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-2.png" alt="">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -55,7 +55,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img src="../assets/img/vaso-cafe.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-3.png" alt="">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -66,7 +66,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img src="../assets/img/vaso-cafe.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-4.png" alt="">
                         </div>
                         <div>
                             <h3>Producto</h3>
