Responsive de index y nosotros

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -42,7 +42,7 @@
                 </div>
                 <section class="section2-nosotros">
                     <div>
-                        <img src="../assets/img/iconomail.png" alt="Newsletter">
+                        <img class="imagen-newsletter" src="../assets/img/iconomail.png" alt="Newsletter">
                     </div>
 
                     <div>
