--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-        <header class="header-nosotros">
+        <header>
             <div>
                 <a href="../index.html"><img class="logo-header" src="../assets/img/isologo.png" alt=""></a>
             </div>
@@ -67,24 +67,23 @@
                 <div class="titulo-nosotros titulo-newsletter">
                     <h2>NEWSLETTER</h2>
                 </div>
-                <section class="section2-nosotros">
-                    <div>
-                        <img class="imagen-newsletter" src="../assets/img/iconomail.png" alt="Newsletter">
-                    </div>
-
-                    <div>
-                        <form action="" class="form-newsletter">
-                            <label for="nombre">INGRESE NOMBRE Y APELLIDO</label>
-                            <input class="datos" type="nombre" placeholder="Nombre y apellido" required>
-                            <label for="email">INGRESE EMAIL</label>
-                            <input class="datos" type="email" placeholder="Email" required >
-                            <input type="image" src="../assets/img/iconenviar.png" alt="Enviar" class="boton-enviar">
-                        </form>
-                    </div>
+            <section class="section2-nosotros">
+                <div>
+                    <img class="imagen-newsletter" src="../assets/img/iconomail.png" alt="Newsletter">
+                </div>
+                <div>
+                    <form action="" class="form">
+                        <label for="nombre">INGRESE NOMBRE Y APELLIDO</label>
+                        <input class="datos" type="nombre" placeholder="Nombre y apellido" required>
+                        <label for="email">INGRESE EMAIL</label>
+                        <input class="datos" type="email" placeholder="Email" required >
+                        <input type="image" src="../assets/img/iconenviar.png" alt="Enviar" class="boton-enviar">
+                    </form>
+                </div>
                 </section>
             <section>
-                <form action="" class="form opinion">
-                    <label for="opinion">Te invitamos a dejarnos tu opinion</label>
+                <form action="" class="opinion">
+                    <label class="label for="opinion">Te invitamos a dejarnos tu opinion</label>
                     <input type="opinion" class="input-opinion">
                     <input type="image" src="../assets/img/iconenviar.png" alt="Enviar" class="boton-enviar">
                 </form>
