Sass de tienda, carrito, login

--- a/pages/Tienda.html
+++ b/pages/Tienda.html
@@ -28,16 +28,16 @@
         <section class="titulo">
             <h1>COFEELAND <span><br>STORE</span></h1>
         </section>
-        <section class="Tienda-principal">
-            <section class="Tienda ofertas">
+        <section class="tienda-principal">
+            <section class="tienda ofertas">
                 <h2>OFERTAS</h2>
-                    <ul class="lista-productos">
+                <ul class="lista-productos">
                         <li>
                             <div>
                                 <img class="tam-img" src="../assets/img/of-1.webp" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Tamper</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -48,7 +48,7 @@
                                 <img class="tam-img" src="../assets/img/of-2.jpg" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Portafiltro</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -59,7 +59,7 @@
                                 <img class="tam-img" src="../assets/img/of-3.jpg" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Taza 6 oz</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -70,15 +70,15 @@
                                 <img class="tam-img" src="../assets/img/of-4.webp" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Vaso doble cristal</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
                             </div>
                         </li>
-                    </ul>
+                </ul>
             </section>
-            <section class="Tienda">
+            <section class="tienda">
                 <h2>INSUMOS</h2>
                     <ul class="lista-productos">
                         <li>
@@ -86,7 +86,7 @@
                                 <img class="tam-img" src="../assets/img/in-1.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Brasil</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -97,7 +97,7 @@
                                 <img class="tam-img" src="../assets/img/in-2.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Colombia</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -108,7 +108,7 @@
                                 <img class="tam-img" src="../assets/img/in-3.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Colombia</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -119,7 +119,7 @@
                                 <img class="tam-img" src="../assets/img/in-4.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Peru</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -130,7 +130,7 @@
                                 <img class="tam-img" src="../assets/img/in-5.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Brasil</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -141,7 +141,7 @@
                                 <img class="tam-img" src="../assets/img/in-6.png" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Café Blend Mundial</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -149,7 +149,7 @@
                         </li>
                     </ul>
             </section>
-            <section class="Tienda">
+            <section class="tienda">
                 <h2>CAFETERAS</h2>
                     <ul class="lista-productos">
                         <li>
@@ -157,7 +157,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-1.jpg" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera Italiana</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -168,7 +168,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-2.jpg" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera Prensa Francesa</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -179,7 +179,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-3.webp" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera Electrica</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -190,7 +190,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-4.webp" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera V60</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -201,7 +201,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-5.webp" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera Turca</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
@@ -212,7 +212,7 @@
                                 <img class="tam-img" src="../assets/img/cafet-6.jpg" alt="Producto">
                             </div>
                             <div>
-                                <h3>Producto</h3>
+                                <h3>Cafetera Chemex</h3>
                             </div>
                             <div>
                                 <button><img src="../assets/img/agregar-carrito.png" alt="Agregar al carrito"></button>
