Aplico mixins, extend,variables

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -30,7 +30,11 @@
                 </div>
                 <section class="container-conocenos">
                     <div class="container-parrafo">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ad corporis cum praesentium quidem iste nemo repellendus distinctio, ipsam, libero doloremque consectetur. Praesentium aut reiciendis eius beatae, amet odit provident.</p>
+                        <p>En Coffeeland, llevamos el mundo del café a tu puerta. Somos tu destino único para café premium, cafeteras de calidad y tazas elegantes que realzan tu experiencia cafetera.
+                            Nos apasiona el café tanto como a ti. Además de café de primera, te proporcionamos las herramientas adecuadas. Descubre nuestra gama de cafeteras y equipos de última generación para hacer que cada taza sea perfecta.
+                            En Coffeland, no solo nos preocupamos por el sabor, sino también por el estilo. Explora nuestra colección de tazas y accesorios que añadirán un toque de elegancia a tu rutina diaria de café.
+                            Ya seas un entusiasta del café o un novato, estamos aquí para satisfacer tus necesidades. Nos enorgullece ser tu destino para todo lo relacionado con el café. 
+                            </p>
                     </div>
                     <div>
                         <img  class="imagen-conocenos" src="../assets/img/iconconocenos.png" alt="Conocenos">
