--- a/pages/Ingreso.html
+++ b/pages/Ingreso.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffeeland</title>
-    <link rel="icon" href="./assets/img/logo.png">
+    <meta name="keywords" content="ingreso, login, sign up, cuenta">
+    <meta name="description" content="Inicie sesion para realizar su compra en Coffeeland.">
+    <meta name="author" content="Coffeeland">
+    <title>Ingreso | Coffeeland</title>
+    <link rel="icon" href="../assets/img/logo.ico">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
