--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cafe, cafeteria, cefetera, taza, grano de cafe">
+    <meta name="description" content="Tienda dedicada a la venta de granos de cafe, cafeteras y herramientas para baristas. Envios a todo el pais con los precios mas competitivos del mercado.">
+    <meta name="author" content="Coffeeland">
+    <meta name="copyright" content="Coffeeland">
+    <meta name="language" content="Espanol">
+    <meta property="og:title" content=Coffeeland>
+    <meta property="og:site_name" content=Coffeeland>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=Tienda dedicada a la venta de insumos baristas. Envios a todo el pais.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://images.unsplash.com/photo-1527596428171-7885b82c91c6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1937&q=80>
     <title>Coffeeland</title>
-    <link rel="icon" href="./assets/img/logo.png">
+    <link rel="icon" href="./assets/img/logo.ico">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
