--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffeeland</title>
-    <link rel="icon" href="./assets/img/logo.png">
+    <meta name="keywords" content="ccontacto, Newsletter, nosotros, about us">
+    <meta name="description" content="Contactenos y mantengase informado de las ultimas novedades del mundo del cafe.">
+    <meta name="author" content="Coffeeland">
+    <title>Nosotros | Coffeeland</title>
+    <link rel="icon" href="../assets/img/logo.ico">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
