--- a/pages/Tienda.html
+++ b/pages/Tienda.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffeeland</title>
-    <link rel="icon" href="./assets/img/logo.png">
+    <meta name="keywords" content="tienda cafe, tienda, cafeteras, productos, barista">
+    <meta name="description" content="Tienda con variedad de productos cafeteros para el hogar y cafeterias.">
+    <meta name="author" content="Coffeeland">
+    <title>Tienda | Coffeeland</title>
+    <link rel="icon" href="../assets/img/logo.ico">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
