Media tienda y detalles

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     </header>
     <main>
         <section class="section1-inicio">
-            <img class="img1-inicio" src="./assets/img/isologo.png" alt="">
-            <img class="img2-inicio" src="./assets/img/taza-cafe.png" alt="">
+            <img class="img1-inicio" src="./assets/img/isologo.png" alt="logo">
+            <img class="img2-inicio" src="./assets/img/taza-cafe.png" alt="taza">
         </section>
         <Section class="section2-inicio">
             <h1>EL <span>SITIO</span>  <br>DE TU <br> <span>CAFE</span></h1>
         </Section>
         <section class="section3-inicio">
             <div>
-                <img src="./assets/img/carrete.png" alt="">
+                <img src="./assets/img/carrete.png" alt="carrete">
             </div>
             <div class="enlace">
                 <a href="./pages/Tienda.html" >
