--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -18,16 +18,19 @@
             </div>
             <nav>
                 <ul class="navbar">
-                    <li><a href=""><img src="../assets/img/Buscar.png" alt=""></a></li>
+                    <li><a href=""><img src="../assets/img/Buscar.png" alt="Buscar"></a></li>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./Tienda.html">Tienda</a></li>
                     <li><a href="#">Nosotros</a></li>
                     <li><a href="./Ingreso.html">Ingreso</a></li>
-                    <li><a href="./Carrito.html"><img src="../assets/img/Carrito.png" alt=""></a></li>
+                    <li><a href="./Carrito.html"><img src="../assets/img/Carrito.png" alt="Carrito"></a></li>
                 </ul>
             </nav>
         </header>
         <main class="main-nosotros">
+                <div class="principal-nosotros">
+                    <h1 >Coffeland</h1>
+                </div>
                 <div class="titulo-nosotros">
                     <h2>CONOCENOS</h2>
                 </div>
@@ -52,13 +55,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../assets/img/carr-1.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/img/carr-1.jpg" class="d-block w-100" alt="carrousel1">
                       </div>
                       <div class="carousel-item">
-                        <img src="../assets/img/carr-2.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/img/carr-2.jpg" class="d-block w-100" alt="carrousel2">
                       </div>
                       <div class="carousel-item">
-                        <img src="../assets/img/carr-3.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/img/carr-3.jpg" class="d-block w-100" alt="carrousel3">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
