--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -18,12 +18,12 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li><a href=""><img src="../assets/img/Buscar.png" alt=""></a></li>
+                <li><a href=""><img src="../assets/img/Buscar.png" alt="Buscar"></a></li>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./Tienda.html">Tienda</a></li>
                 <li><a href="./Nosotros.html">Nosotros</a></li>
                 <li><a href="./Ingreso.html">Ingreso</a></li>
-                <li><a href="#"><img src="../assets/img/Carrito.png" alt=""></a></li>
+                <li><a href="#"><img src="../assets/img/Carrito.png" alt="Carrito"></a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
                 <ul class="productos-carrito">
                     <li>          
                         <div>
-                            <img class="tam-img2" src="../assets/img/in-1.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-1.png" alt="Producto-carrito">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -47,7 +47,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img class="tam-img2" src="../assets/img/in-2.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-2.png" alt="Producto-carrito">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -58,7 +58,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img class="tam-img2" src="../assets/img/in-3.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-3.png" alt="Producto-carrito">
                         </div>
                         <div>
                             <h3>Producto</h3>
@@ -69,7 +69,7 @@
                     </li>
                     <li>          
                         <div>
-                            <img class="tam-img2" src="../assets/img/in-4.png" alt="">
+                            <img class="tam-img2" src="../assets/img/in-4.png" alt="Producto-carrito">
                         </div>
                         <div>
                             <h3>Producto</h3>
