--- a/pages/Ingreso.html
+++ b/pages/Ingreso.html
@@ -18,12 +18,12 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li><a href=""><img src="../assets/img/Buscar.png" alt=""></a></li>
+                <li><a href=""><img src="../assets/img/Buscar.png" alt="Buscar"></a></li>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./Tienda.html">Tienda</a></li>
                 <li><a href="./Nosotros.html">Nosotros</a></li>
                 <li><a href="#">Ingreso</a></li>
-                <li><a href="./Carrito.html"><img src="../assets/img/Carrito.png" alt=""></a></li>
+                <li><a href="./Carrito.html"><img src="../assets/img/Carrito.png" alt="Carrito"></a></li>
             </ul>
         </nav>
     </header>
